correction overflow + tri des cards

--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
     padding: 0;
     text-decoration: none;
 }
-
+body{
+    overflow-x: hidden;
+}
 html{
     width: 100vw;
 }
